# Argument-Patch-A-RapidPatch-Extension

./: .gitignore  README.md
Dynamic Patch Triggers/: DynamicPatchTrigger.c  Main.c  Makefile
Dynamic-Patch-Triggers/: DebugMonitor.asm  DynamicPatchInstaller.c  DynamicPatchInstaller.h  DynamicPatchTrigger.c  DynamicPatchTrigger.h  LePatch.c  LePatch.h  Main.c  Makefile  RapidPatch.h  build.sh
Fixed Patch Tiggers/: CMakeLists.txt  FirmwarePatches.c  FirmwarePatches.h  FixedPatchTrigger.h  RapidPatch.h  main.c
Fixed-Patch-Tiggers/: CMakeLists.txt  FixedPointPatching.c
